--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/avatar.png" alt="avatar da Stefany" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Stefany</p>
         <h1>Eu Aprendo Programação</h1>
